--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "standard": "^17.0.0",
     "tailwindcss": "^3.1.6"
   }
 }
