--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.7",
+    "nanoid": "^4.0.0",
     "postcss": "^8.4.14",
     "standard": "^17.0.0",
     "tailwindcss": "^3.1.6"
